# SSPM-Tableau

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  scan.yml
docs/: README.md
src/tableau_sspm/: __init__.py  checks.py  cli.py  collector.py  models.py  report.py  scoring.py
src/tableau_sspm/checks/: __init__.py  access.py  api.py  base.py  data.py  identity.py  logging_checks.py
tests/: conftest.py  test_checks.py  test_scoring.py
